align breakpoints with Bootstrap

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
@@ -129,7 +129,7 @@
     min-width: rem(80);
   }
 
-  @media only screen and (min-width: 1024px) {
+  @include media-breakpoint-up(xl) {
     padding-top: $spacer * 2.5;
     padding-bottom: $spacer * 8;
 
