--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
@@ -125,7 +125,7 @@
     text-decoration: none;
   }
 
-  @media only screen and (min-width: 1024px) {
+  @include media-breakpoint-up(xl) {
     padding-top: $spacer * 6.5;
     padding-bottom: $spacer * 6.5;
 
