--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
@@ -207,7 +207,7 @@
     gap: $spacer * 3;
   }
 
-  @media only screen and (min-width: 1024px) {
+  @include media-breakpoint-up(xl) {
     padding-bottom: $spacer * 3;
 
     &__menu {
