--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_integrations.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_integrations.scss
@@ -45,7 +45,7 @@
     background-image: url('/img/mobile/integrations.svg');
   }
 
-  @media only screen and (min-width: 1024px) {
+  @include media-breakpoint-up(xl) {
     padding-top: $spacer * 6.5;
 
     &__title {
