--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
@@ -24,7 +24,7 @@
     font-size: $font-size-s !important;
   }
 
-  @media only screen and (min-width: 1024px) {
+  @include media-breakpoint-up(xl) {
     padding-top: 0;
     box-sizing: border-box;
   }
