--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/link.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/link.html
@@ -1,5 +1,4 @@
 {{ $defaultClass := "link" }} {{ $cssClass := .Scratch.Get "cssClass" }}
 <a class='{{ printf "%s %s" $defaultClass $cssClass }}' href="{{ .Params.link.url }}">
-  <span>{{ .Params.link.text }}</span>
-  <span class="link-icon">{{ partial "svg" "Arrow-Right-Sm.svg" }}</span>
+  {{ .Params.link.text }}
 </a>
