--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/svg.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/svg.html
@@ -1,1 +1,1 @@
-{{ $path := "icons/outline/" }} {{ $filename := . }} {{ readFile (printf "%s%s" $path $filename) | safeHTML }}
+{{ $path := "assets/icons/outline/" }} {{ $filename := . }} {{ readFile (printf "%s%s" $path $filename) | safeHTML }}
