--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -4,9 +4,20 @@
 
 @import 'partials/logo';
 @import 'partials/top-banner';
+@import 'partials/customers';
 @import 'partials/menu';
 @import 'partials/buttons';
 @import 'partials/hero';
+@import 'partials/link';
+@import 'partials/core-features';
+@import 'partials/customer-stories';
+@import 'partials/docker-deploy';
+@import 'partials/vectors';
+@import 'partials/integrations';
+@import 'partials/get-started';
+@import 'partials/footer';
+@import 'partials/additional-resources';
+@import 'partials/menu-mobile';
 
 .main-header {
   background: $neutral-10;
