--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
@@ -1,21 +1,31 @@
+@use '../helpers/functions' as *;
+
 .top-banner {
   display: flex;
-  height: 40px;
+  height: rem(40);
   justify-content: center;
   align-items: center;
-  gap: 24px;
+  gap: $spacer * 1.5;
+  padding-top: rem(60);
+  box-sizing: content-box;
   border-bottom: 1px solid var(--Neutral-N20, #161e33);
   background: var(--Neutral-N10, #090e1a);
 
-  &__icon {
-    color: $secondary-blue-50;
-  }
   &__text {
     color: $neutral-94;
     font-size: $font-size-s;
   }
+
+  &__icon {
+    margin-right: calc($spacer / 4);
+  }
+
   &__link {
-    color: $primary-60;
-    font-size: $font-size-s;
+    font-size: $font-size-s !important;
+  }
+
+  @include media-breakpoint-up(xl) {
+    padding-top: 0;
+    box-sizing: border-box;
   }
 }
