--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
@@ -1,24 +1,15 @@
 <div class="main-menu">
   {{ partial "logo.html" . }}
+  <button type="button" class="main-menu__trigger">{{ partial "svg" "Hamburger-Menu-White.svg" }}</button>
   <ul class="main-menu__links">
+    {{ range .Params.menuItems }}
     <li class="main-menu__item">
-      <a class="menu-link" href="#">Product</a>
+      <a class="menu-link" href="{{ .url }}">{{ .name }}</a>
     </li>
-    <li class="main-menu__item">
-      <a class="menu-link" href="#">Developers</a>
-    </li>
-    <li class="main-menu__item">
-      <a class="menu-link" href="#">Community</a>
-    </li>
-    <li class="main-menu__item">
-      <a class="menu-link" href="#">Pricing</a>
-    </li>
-    <li class="main-menu__item">
-      <a class="menu-link" href="#">Company</a>
-    </li>
+    {{ end }}
   </ul>
   <div class="main-menu__buttons">
-    <a class="menu-link mx-3"> Log in </a>
-    <button class="button button_contained button_sm">Try Free</button>
+    <a href="{{ .Params.logIn.url }}" class="menu-link mx-3">{{ .Params.logIn.text }}</a>
+    <button class="button button_contained button_sm">{{ .Params.tryFree }}</button>
   </div>
 </div>
