--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/link.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/link.html
@@ -1,4 +1,8 @@
-{{ $defaultClass := "link" }} {{ $cssClass := .Scratch.Get "cssClass" }}
+{{ $defaultClass := "link" }}
+{{ $cssClass := "" }}
+{{ if .Scratch.Get "cssClass" }}
+  {{ $cssClass = .Scratch.Get "cssClass" }}
+{{ end }}
 <a class='{{ printf "%s %s" $defaultClass $cssClass }}' href="{{ .Params.link.url }}">
   {{ .Params.link.text }}
 </a>
