--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
@@ -6,5 +6,6 @@
     <a class="integrations__link" href="{{ .Params.frameworkLink.url }}">{{ .Params.frameworkLink.text }}</a>.
   </p>
   {{ partial "link" . }}
-  <div class="integrations__preview" />
+  <div class="integrations__preview"></div>
+  <div class="integrations__overlay"></div>
 </section>
