--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
@@ -1,5 +1,8 @@
 <section class="get-started">
   <div class="get-started__content">
+    <div class="get-started__overlay-top"></div>
+    <div class="get-started__overlay-middle"></div>
+    <div class="get-started__overlay-bottom"></div>
     <h3 class="get-started__title">{{ .Params.title }}</h3>
     <p class="get-started__subtitle">{{ .Params.subtitle }}</p>
     <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">{{ .Params.startFree.text }}</a>
