--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -20,9 +20,7 @@
         <h6 class="core-features__card-title">{{ .title }}</h6>
         <p class="core-features__card-content">{{ .content }}</p>
       </div>
-      <a class="link link_dark link_md align-self-start" href="{{ .link.url }}">
-       {{ .link.text }}
-      </a>
+      <a class="link link_dark link_md align-self-start" href="{{ .link.url }}"> {{ .link.text }} </a>
     </div>
     {{ end }}
   </div>
