--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customers.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customers.html
@@ -6,8 +6,6 @@
   </div>
   <div class="customers__description">
     <span class="customers__title">{{ .Params.customerStories.text }}</span>
-    <a class="link link_xl" href="{{ .Params.customerStories.url }}">
-      {{ .Params.customerStories.textLink }}
-    </a>
+    <a class="link link_xl" href="{{ .Params.customerStories.url }}"> {{ .Params.customerStories.textLink }} </a>
   </div>
 </section>
