--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
@@ -8,9 +8,7 @@
       <div class="vectors__card-description">
         <h4 class="vectors__card-title">{{ .title }}</h4>
         <p class="vectors__card-content">{{ .content }}</p>
-        <a class="link link_light link_md" href="{{ .link.url }}">
-          {{ .link.text }}
-        </a>
+        <a class="link link_light link_md" href="{{ .link.url }}"> {{ .link.text }} </a>
       </div>
       <div class="vectors__card-image" style="background-image: url(/img/vectors/vector-{{$index}}.svg)"></div>
     </div>
