inline links hover

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
@@ -31,9 +31,13 @@
   }
 
   &__link {
-    color: $primary-60;
+    color: $primary-50;
     font-size: $font-size-xl;
     text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__top {
