--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_integrations.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_integrations.scss
@@ -33,6 +33,10 @@
     color: $primary-60;
     font-size: $font-size-xl;
     text-decoration: underline;
+
+    &:hover {
+      color: $primary-50;
+    }
   }
 
   &__preview {
