--- a/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
@@ -86,7 +86,7 @@ $body-bg: $neutral-98;
 $link-color: $primary-50;
 $link-hover-color: $primary-50;
 $link-decoration: none;
-$link-hover-decoration: underline;
+// don't use underline for links hover by default
 
 $font-family-sans-serif: 'Satoshi', 'Helvetica Neue', 'Noto Sans', 'Liberation Sans', Arial, sans-serif,
   'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
