--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -2,7 +2,7 @@
   <h2 class="core-features__title">{{ .Params.title }}</h2>
   <p class="core-features__subtitle">{{ .Params.description }}</p>
   <a class="link link_xl" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
-  <div class="core-features__cloud-native">
+  <div class="core-features__card core-features__cloud-native">
     <div>
       <h4 class="core-features__card-title">{{ .Params.cloudFeature.title }}</h4>
       <p class="core-features__card-content">{{ .Params.cloudFeature.content }}</p>
