--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -2,11 +2,12 @@
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
+@import "components";
 @import 'partials/logo';
 @import 'partials/top-banner';
 @import 'partials/customers';
 @import 'partials/menu';
-@import 'partials/buttons';
+@import 'components/buttons';
 @import 'partials/hero';
 @import 'partials/link';
 @import 'partials/core-features';
